--- a/blocks/section-subtitle.css
+++ b/blocks/section-subtitle.css
@@ -5,6 +5,7 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  z-index: 1;
 }
 
 .section-subtitle_theme_dark {
