--- a/blocks/section-title.css
+++ b/blocks/section-title.css
@@ -6,6 +6,7 @@
   line-height: 69px;
   font-size: 60px;
   font-weight: bold;
+  z-index: 1;
 }
 
 .section-title_theme_dark {
